# luxctl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: example-config.toml
examples/: custom_source.py
luxctl/: __init__.py  cli.py  config.py  controller.py  daemon.py  device.py  diagnostics.py  doctor.py  init_cli.py  service.py  slack_cli.py  sources.py  state.py  stats.py  statuses.py  tray.py  types.py
luxctl/sinks/: __init__.py  log.py  luxafor.py  slack.py
luxctl/sources/: __init__.py  calendar.py  idle.py  lock.py  manual.py  slack.py
systemd/: luxctl.service
tests/: conftest.py  test_cli.py  test_config.py  test_controller.py  test_custom_presets.py  test_daemon.py  test_device.py  test_diagnostics.py  test_service.py  test_sinks.py  test_slack.py  test_sources.py  test_sources_local.py  test_state.py  test_stats.py  test_statuses.py
udev/: 99-luxafor.rules
